# todocli

./: .coveragerc  .gitignore  README.md  requirements.txt  setup.cfg  test.py
.github/workflows/: coverage.yml
todocli/: __main__.py  api.py  controller.py  formatters.py  todocli.py
