[metadata]
name = todocli
version = attr: todocli.__version__
author = Antonio Belloso Vicente
author_email = antonio.bellosovicente@telefonica.com

long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    requests~=2.28.2
    termtables~=0.2.4
    bleach
[options.extras_require]
dev =
    black
    flake8

[options.entry_points]
console_scripts =
    todocli = todocli.todocli:todo_cli
